# familiar

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Familiar.sln  README.md  conanfile.txt  docker-build.bat  docker-build.sh  docker-compose.debug.yml  docker-compose.yml
Familiar/: Familiar.vcxproj  main.cpp
src/: CMakeLists.txt  main.cpp
src/FamiliarEngine/: Base.hpp  Common.hpp  Core.hpp  Filesystem.hpp  Rendering.hpp  Serialization.hpp
src/FamiliarEngine/Common/: BasicIncludes.hpp  Hash.hpp  Math.hpp
src/FamiliarEngine/Config/: WindowSettings.hpp
src/FamiliarEngine/Core/: Context.hpp  ContextManager.hpp  Core.hpp  UpdateManager.hpp  Window.hpp
src/FamiliarEngine/Core/Interfaces/: IUpdateable.hpp
src/FamiliarEngine/Filesystem/: File.hpp  Serialization.hpp
src/FamiliarEngine/Rendering/: RenderLayer.hpp  RenderView.hpp
src/FamiliarEngine/Rendering/Interfaces/: IRenderable.hpp
src/FamiliarEngine/Serialization/: Deserializer.hpp  ISerializable.hpp  SerializablePackage.hpp  SerializableRecord.hpp  Serializer.hpp
src/FamiliarEngine/Serialization/Interfaces/: ISerializable.hpp
src/FamiliarGame/: ApplicationCore.hpp  MainWindow.hpp  main.cpp
src/FamiliarGame/Context/: StarSystemContext.hpp
src/FamiliarGame/StarSystemContext/: OrbitablesManager.hpp  StarSystemContext.hpp
src/FamiliarGame/StarSystemContext/Components/: CelestialBase.hpp  OrbitableBase.hpp  StarSystemRecipe.hpp
src/FamiliarGame/StarSystemContext/Entities/: CelestialBodies.hpp  VisualEffects.hpp
src/FamiliarGame/StarSystemContext/Interfaces/: IOrbitable.hpp
(+10 files in other folders)
